@startuml ParserClassDiagram
skinparam classAttributeIconSize 0
skinparam style strictuml

class Parser {
    -history: CommandHistory
    +setCommandHistory(CommandHistory): void
    +parse(String): Command
    -parseCreate(String): Command
    -parseDelete(String): Command
    -parseAdd(String): Command
    -parseRemove(String): Command
    -parseStatus(String): Command
    -parseEdit(String): Command
    -parseSearch(String): Command
    -parseSort(String): Command
    -parseFind(String): Command
    -parseUndo(): Command
}

class ArgumentTokenizer {
    +ArgumentTokenizer(String, String...)
    +getValue(String): String
}

class Validator {
    +validateName(String): String
    +validatePhone(String): String
    +validateEmail(String): String
    +validateAddress(String): String
    +validateCourse(String): String
    +validateModuleCode(String): String
    +validateGrade(String): Grade
    +validateCredits(String): Integer
    +validateModuleFormat(String): String[]
    +validateIndex(String): int
}

class Normalizer {
    +normalizeName(String): String
    +normalizePhone(String): String
    +normalizeEmail(String): String
    +normalizeAddress(String): String
    +normalizeCourse(String): String
    +normalizeModuleCode(String): String
    +normalizeGrade(String): String
}

interface Command {
    +execute(StudentDatabase, Storage): CommandResult
    +undo(StudentDatabase, Storage): CommandResult
    +isUndoable(): boolean
}

class ParseException {
    +ParseException(String)
}

Parser "1" --> "1" ArgumentTokenizer : uses
Parser  ..>  Command : creates
Parser  ..>  ParseException : throws

Parser "1" --> "0..*" Validator : uses
Parser "1" --> "0..*" Normalizer : uses

@enduml
